update CMakeList + euler.*

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,11 +18,13 @@ src/h20phi.h
 src/interpolation.h
 src/macromesh.h
 src/model.h
+src/euler.h
 src/field.c
 src/geometry.c
 src/interpolation.c
 src/macromesh.c
 src/model.c
+src/euler.c
 )
 
 #schnaps library
