test shallow compilation success

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,7 @@ include_directories(src)
 
 enable_testing()
 
-list(APPEND
-source_files
+list(APPEND source_files
 src/field.h
 src/schnaps.h
 src/geometry.h
@@ -18,7 +17,6 @@ src/h20phi.h
 src/interpolation.h
 src/macromesh.h
 src/model.h
-src/euler.h
 src/stvenantlin.h
 src/ondes.h
 src/field.c
@@ -26,13 +24,9 @@ src/geometry.c
 src/interpolation.c
 src/macromesh.c
 src/model.c
-<<<<<<< HEAD
 src/shallow.c
 src/shallow.h
-=======
-src/euler.c
 src/stvenantlin.c
->>>>>>> cdc3661872274d5e0ff91e15d04a410ba38a28f4
 )
 
 #schnaps library
@@ -77,13 +71,6 @@ add_executable(
 )
 target_link_libraries(testmodel _schnaps m pthread)
 
-add_executable(
-  testeuler
-  test/test.h
-  test/testeuler.c
-)
-target_link_libraries(testeuler _schnaps m pthread)
-add_test(testeuler testeuler)
 
 add_test(testfield testfield)
 add_executable(
@@ -102,15 +89,6 @@ add_executable(
 )
 target_link_libraries(testfielddg _schnaps m pthread)
 add_test(testfielddg testfielddg)
-
-add_test(testwaves testwaves)
-add_executable(
-  testwaves
-  test/test.h
-  test/testondes.c
-)
-target_link_libraries(testwaves _schnaps m pthread)
-add_test(testwaves testwaves)
 
 
 add_test(testfieldrk2 testfieldrk2)
@@ -151,6 +129,10 @@ target_link_libraries(testsubcelldgvol _schnaps m pthread)
 add_test(testsubcelldgvol testsubcelldgvol)
 
 add_test(testfieldrk2-2d-subcell testfieldrk2-2d-subcell)
+
+
+
+
 add_executable(
   testfieldrk2-2d-subcell
   test/test.h
@@ -158,3 +140,16 @@ add_executable(
 )
 target_link_libraries(testfieldrk2-2d-subcell _schnaps m pthread)
 add_test(testfieldrk2-2d-subcell testfieldrk2-2d-subcell)
+
+add_executable(
+  testshallow 
+  test/testshallow.h                                                         
+  test/testshallow.c                                      
+)                                                                     
+
+target_link_libraries( testshallow _schnaps m pthread )
+add_test( testshallow testshallow )        
+    
+    
+    
+    
