CMakeLists.txt updated

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,8 @@ src/interpolation.h
 src/macromesh.h
 src/model.h
 src/ondes.h
+src/shallow.h
+src/euler.h
 src/field.c
 src/geometry.c
 src/interpolation.c
@@ -36,7 +38,6 @@ src/macromesh.c
 src/model.c
 src/euler.c
 src/shallow.c
-src/shallow.h
 )
 
 #schnaps library
@@ -90,6 +91,15 @@ add_executable(
 )
 target_link_libraries(testfield _schnaps m pthread)
 add_test(testfield testfield)
+
+add_test(testeuler testeuler)
+add_executable(
+  testeuler
+  test/test.h
+  test/testeuler.c
+)
+target_link_libraries(testeuler _schnaps m pthread)
+add_test(testeuler testeuler)
 
 add_test(testfielddg testfielddg)
 add_executable(
