add test executable to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,11 @@ toto
 
 dgerror.msh
 
+dgerrorstvenantlin.msh
+
 dgvisu.msh
+
+dgvisustvenantlin.msh
 
 error.msh
 
@@ -70,6 +74,14 @@ testinterpolation
 testmacromesh
 
 testmodel
+
+testeuler
+
+testshallow
+
+teststvenantlin
+
+testwaves
 
 testsubcelldgvol
 
