--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ project(schnaps)
 #set(CMAKE_C_FLAGS "-optRevert -optTauSelectFile=select.tau -std=c99 -fopenmp -Ofast")
 #set(CMAKE_C_COMPILER "/opt/local/bin/gcc-mp-4.8")
 
-    set(CMAKE_C_FLAGS "-std=c99 -D_REENTRANT -O3")
-    find_package(OpenMP)
+set(CMAKE_C_FLAGS "-std=c99 -D_REENTRANT -O3")
+find_package(OpenMP)
 if (OPENMP_FOUND)
     set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
@@ -19,144 +19,171 @@ include_directories(src)
 
 enable_testing()
 
-    list(APPEND source_files
-            src/field.h
-            src/schnaps.h
-            src/geometry.h
-            src/global.h
-            src/h20phi.h
-            src/interpolation.h
-            src/macromesh.h
-            src/model.h
-            src/stvenantfp.h
-            src/stvenantfp.c
-            src/shallow.c
-            src/shallow.h
-            src/stvenantlin.c
-        )
+list(APPEND source_files
+src/field.h
+src/schnaps.h
+src/geometry.h
+src/global.h
+src/h20phi.h
+src/interpolation.h
+src/macromesh.h
+src/model.h
+src/ondes.h
+src/shallow.h
+src/euler.h
+src/ondes.c
+src/stvenantlin.h
+src/field.c
+src/geometry.c
+src/interpolation.c
+src/macromesh.c
+src/model.c
+src/euler.c
+src/shallow.c
+src/stvenantlin.c
+)
 
 #schnaps library
 add_library (_schnaps ${source_files})
 
 # main program schnaps
-    add_executable(
-            schnaps
-            src/schnaps.c
-            )
+add_executable(
+  schnaps
+  src/schnaps.c
+)
 target_link_libraries(schnaps _schnaps m pthread)
 
 # list of tests
-    add_executable(
-            testmacromesh
-            test/test.h
-            test/testmacromesh.c
-            )
-    target_link_libraries(testmacromesh _schnaps m pthread)
+add_executable(
+  testmacromesh
+  test/test.h
+  test/testmacromesh.c
+)
+target_link_libraries(testmacromesh _schnaps m pthread)
 add_test(testmacromesh testmacromesh)
 
-    add_executable(
-            testgeometry
-            test/test.h
-            test/testgeometry.c
-            )
-    target_link_libraries(testgeometry _schnaps m pthread)
+add_executable(
+  testgeometry
+  test/test.h
+  test/testgeometry.c
+)
+target_link_libraries(testgeometry _schnaps m pthread)
 add_test(testgeometry testgeometry)
 
-    add_executable(
-            testinterpolation
-            test/test.h
-            test/testinterpolation.c
-            )
-    target_link_libraries(testinterpolation _schnaps m pthread)
+add_executable(
+  testinterpolation
+  test/test.h
+  test/testinterpolation.c
+)
+target_link_libraries(testinterpolation _schnaps m pthread)
 add_test(testinterpolation testinterpolation)
 
-    add_executable(
-            testmodel
-            test/test.h
-            test/testmodel.c
-            )
+add_executable(
+  testmodel
+  test/test.h
+  test/testmodel.c
+)
 target_link_libraries(testmodel _schnaps m pthread)
-    add_test(  
-            testfield
-            test/test.h
-            test/testfield.c
-            )
-    target_link_libraries(testfield _schnaps m pthread)
+
+add_executable(
+  teststvenantlin
+  test/test.h
+  test/teststvenantlin.c
+)
+target_link_libraries(teststvenantlin _schnaps m pthread)
+add_test(teststvenantlin teststvenantlin)
+
+add_test(testfield testfield)
+add_executable(
+  testfield
+  test/test.h
+  test/testfield.c
+)
+target_link_libraries(testfield _schnaps m pthread)
 add_test(testfield testfield)
 
+add_test(testeuler testeuler)
+add_executable(
+  testeuler
+  test/test.h
+  test/testeuler.c
+)
+target_link_libraries(testeuler _schnaps m pthread)
+add_test(testeuler testeuler)
+
 add_test(testfielddg testfielddg)
-    add_executable(
-            testfielddg
-            test/test.h
-            test/testfielddg.c
-            )
-    target_link_libraries(testfielddg _schnaps m pthread)
-    add_test(testfielddg testfielddg)
+add_executable(
+  testfielddg
+  test/test.h
+  test/testfielddg.c
+)
+target_link_libraries(testfielddg _schnaps m pthread)
+add_test(testfielddg testfielddg)
+
+add_test(testwaves testwaves)
+add_executable(
+  testwaves
+  test/test.h
+  test/testondes.c
+)
+target_link_libraries(testwaves _schnaps m pthread)
+
 add_test(testfieldrk2 testfieldrk2)
-    add_executable(
-            testfieldrk2
-            test/test.h
-            test/testfieldrk2.c
-            )
-    target_link_libraries(testfieldrk2 _schnaps m pthread)
+add_executable(
+  testfieldrk2
+  test/test.h
+  test/testfieldrk2.c
+)
+target_link_libraries(testfieldrk2 _schnaps m pthread)
 add_test(testfieldrk2 testfieldrk2)
 
 add_test(test2dmeshdetection test2dmeshdetection)
-    add_executable(
-            test2dmeshdetection
-            test/test.h
-            test/test2dmeshdetection.c
-            )
-    target_link_libraries(test2dmeshdetection _schnaps m pthread)
+add_executable(
+  test2dmeshdetection
+  test/test.h
+  test/test2dmeshdetection.c
+)
+target_link_libraries(test2dmeshdetection _schnaps m pthread)
 add_test(test2dmeshdetection test2dmeshdetection)
 
 add_test(testfieldrk2-2d testfieldrk2-2d)
-    add_executable(
-            testfieldrk2-2d
-            test/test.h
-            test/testfieldrk2-2d.c
-            )
-    target_link_libraries(testfieldrk2-2d _schnaps m pthread)
+add_executable(
+  testfieldrk2-2d
+  test/test.h
+  test/testfieldrk2-2d.c
+)
+target_link_libraries(testfieldrk2-2d _schnaps m pthread)
 add_test(testfieldrk2-2d testfieldrk2-2d)
 
 
 add_test(testsubcelldgvol testsubcelldgvol)
-    add_executable(
-            testsubcelldgvol
-            test/test.h
-            test/testsubcelldgvol.c
-            )
-    target_link_libraries(testsubcelldgvol _schnaps m pthread)
+add_executable(
+  testsubcelldgvol
+  test/test.h
+  test/testsubcelldgvol.c
+)
+target_link_libraries(testsubcelldgvol _schnaps m pthread)
 add_test(testsubcelldgvol testsubcelldgvol)
 
 add_test(testfieldrk2-2d-subcell testfieldrk2-2d-subcell)
 
-    add_executable(
-            testfieldrk2-2d-subcell
-            test/test.h
-            test/testfieldrk2-2d-subcell.c
-            )
-    target_link_libraries(testfieldrk2-2d-subcell _schnaps m pthread)
+
+
+
+add_executable(
+  testfieldrk2-2d-subcell
+  test/test.h
+  test/testfieldrk2-2d-subcell.c
+)
+target_link_libraries(testfieldrk2-2d-subcell _schnaps m pthread)
 add_test(testfieldrk2-2d-subcell testfieldrk2-2d-subcell)
 
-    add_executable(
-            testshallow 
-            test/testshallow.h                                                         
-            test/testshallow.c                                      
-            )                                                                     
+add_executable(
+  testshallow 
+  test/testshallow.h                                                         
+  test/testshallow.c                                      
+)                                                                     
 
-    target_link_libraries( testshallow _schnaps m pthread )
-add_test( testshallow testshallow )       
-
-    add_executable(
-            teststvenantfp
-            test/teststvenantfp.h                                                         
-            test/teststvenatfp.c                                      
-            )                                                                     
-
-    target_link_libraries( teststvenant _schnaps m pthread )
-add_test( teststvenantfp teststvenantfp )        
-
-
-
-
+target_link_libraries( testshallow _schnaps m pthread )
+add_test( testshallow testshallow )        
+    
